// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`app/credExplorer/PagerankTable ContributionRow has proper depth-based styling 1`] = `
Object {
  "buttonStyle": Object {
    "marginLeft": 30,
    "marginRight": 5,
  },
  "trStyle": Object {
    "backgroundColor": "rgba(0,143.4375,0,0.18999999999999995)",
  },
}
`;

exports[`app/credExplorer/PagerankTable PagerankTable has a filter select with expected label text 1`] = `"Filter by node type: "`;

exports[`app/credExplorer/PagerankTable PagerankTable has a filter select with expected option groups 1`] = `
Array [
  Object {
    "style": undefined,
    "text": "Show all",
    "valueString": "NodeAddress[]",
  },
  Object {
    "style": Object {
      "fontWeight": "bold",
    },
    "text": "bar",
    "valueString": "NodeAddress[\\"bar\\"]",
  },
  Object {
    "style": undefined,
    "text": " alpha",
    "valueString": "NodeAddress[\\"bar\\",\\"a\\"]",
  },
  Object {
    "style": Object {
      "fontWeight": "bold",
    },
    "text": "foo",
    "valueString": "NodeAddress[\\"foo\\"]",
  },
  Object {
    "style": undefined,
    "text": " alpha",
    "valueString": "NodeAddress[\\"foo\\",\\"a\\"]",
  },
  Object {
    "style": undefined,
    "text": " beta",
    "valueString": "NodeAddress[\\"foo\\",\\"b\\"]",
  },
  Object {
    "style": Object {
      "fontWeight": "bold",
    },
    "text": "unused",
    "valueString": "NodeAddress[\\"unused\\"]",
  },
  Object {
    "style": Object {
      "fontWeight": "bold",
    },
    "text": "xox",
    "valueString": "NodeAddress[\\"xox\\"]",
  },
]
`;

exports[`app/credExplorer/PagerankTable PagerankTable renders expected message with just adapters 1`] = `
<p>
  Please run PageRank to see analysis.
</p>
`;

exports[`app/credExplorer/PagerankTable PagerankTable renders expected message with null props 1`] = `
<p>
  You must load a graph before seeing PageRank analysis.
</p>
`;
